[project]
name = "map-modes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.6",
    "numpy>=2.2.6",
    "pandas>=2.3.2",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "fastemriwaveforms",
]

[tool.uv.sources]
fastemriwaveforms = { path = "../FastEMRIWaveforms", editable = true }

